--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -20,10 +20,12 @@
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-3 my-1">
-                            {% if item.product.image %}
-                            <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}"> 
+                            {% if item.product.image_url %}
+                                <img class="w-100" src="{{ item.product.image_url }}" alt="{{ item.product.name }}"> 
+                            {% elif item.product.image %}
+                                <img class="w-100" src="{{ MEDIA_URL }}{{ item.product.image }}" alt="{{ item.product.name }}">
                             {% else %}
-                            <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                                <img class="w-100" src="{{ STATIC_URL }}noimage.png" alt="{{ item.product.name }}">
                             {% endif %}
                         </div>
                         <div class="col-9">
