--- a/bazaar/templates/bazaar/product_detail.html
+++ b/bazaar/templates/bazaar/product_detail.html
@@ -119,6 +119,8 @@
     <form method="POST" action="{% url 'product_detail' product.id %}">
         {% csrf_token %}
         <textarea name="review_text" required></textarea>
+         <!-- Rating input -->
+        <input type="number" name="rating" min="1" max="5" required> 
         <button type="submit">Submit Review</button>
     </form>
 {% endif %}
